<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AtWordsEnd</string>
    <string name="app_name_formatted">At Word\'s End</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_games_list">GamesListActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_match_find">MatchFindActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_friend">Add Friend</string>
    <string name="back">Back</string>
    <string name="title_activity_view_friend">ViewFriendActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_game">At Word\'s End</string>
    <string name="view_games_list">View Games</string>
    <string name="match_find">Find Match</string>
    <string name="friends_list">Friends</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="finding_match">Finding Match</string>
    <string name="received_requests">Received Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="add_friends">Add Friends</string>
    <string name="games_list">Active Games</string>
    <string name="score">Score (W/L)</string>
    <string name="play_word">Play Word</string>
    <string name="placeholder">-</string>
    <string name="create_account">Create Account</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start_game">Start Game</string>
    <string name="rules">Rules</string>

</resources>
