<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


<TextView
    android:id="@+id/popupText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:text="@string/placeholder"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<Button
    android:id="@+id/addButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/popupText"
    android:text="@string/add_friend" />

<Button
    android:id="@+id/backButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/popupText"
    android:layout_centerHorizontal="true"
    android:text="@string/back" />

<Button
    android:id="@+id/denyButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/popupText"
    android:layout_alignParentEnd="true" 
    android:layout_alignParentRight="true"
    android:text="@string/deny_friend" />

</RelativeLayout>